syntax = "proto3";

package chord;

message FindSuccessorRequest {
  bytes id = 1;
}

message Empty {
}

message GetPredecessorResponse {
  FingerEntryMsg predecessor = 1;
}


message SetPredecessorRequest {
  FingerEntryMsg predecessor = 1;
}

message FindSuccessorResponse {
  FingerEntryMsg successor = 1;
}

message NotifyRequest {
  string address = 1;
}

message NotifyResponse {
}


message FingerEntryMsg {
  bytes key = 1;
  string url = 2;
}

message FingerTableMsg {
  repeated FingerEntryMsg fingers = 1;
}

message FindPredecessorRequest {
  bytes id = 1;
}

message FindPredecessorResponse {
  FingerEntryMsg predecessor = 1;
}

service Chord {
  rpc FindSuccessor (FindSuccessorRequest) returns (FindSuccessorResponse);
  rpc GetPredecessor (Empty) returns (GetPredecessorResponse);
  rpc SetPredecessor (SetPredecessorRequest) returns (Empty);
  rpc Notify (NotifyRequest) returns (Empty);

  rpc FindPredecessor (FindPredecessorRequest) returns (FindPredecessorResponse);

  // debug
  rpc GetFingerTable (Empty) returns (FingerTableMsg);
}
